--- a/ACM_General/home/static/home/calendar/index.html
+++ b/ACM_General/home/static/home/calendar/index.html
@@ -76,7 +76,7 @@
     <body>
         <div class="main-section">
             <div class="content-wrapper">
-                <iframe src="https://calendar.google.com/calendar/embed?src=mst.edu_7u3stm8bn7l2umuastep5fmbl0%40group.calendar.google.com&ctz=America/Chicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+                <iframe src="https://calendar.google.com/calendar/embed?src=mst.edu_7u3stm8bn7l2umuastep5fmbl0%40group.calendar.google.com&ctz=America/Chicago" style="border: 0" width="100%" frameborder="0" scrolling="no"></iframe>
             </div>
         </div>
 
