added some custom css stuff, just temporary, moved a lot around in the presentation. Next is get that logo transparency fixed.

--- a/Presentations/1_Intro/index.html
+++ b/Presentations/1_Intro/index.html
@@ -26,57 +26,63 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
-                    <section><div style="margin: auto; background-size: contain; background-position: center; background-repeat: no-repeat; width: 700px; height: 700px; background-image: url(./img/sigcomlogo.png);"></div></section>
+                    <section data-background="#d0d0d0">
+                        <div style="margin: 0 auto; background-size: contain; background-position: center; background-repeat: no-repeat; width: 700px; height: 400px; background-image: url(./img/sigcomlogo.png);"></div>
+                        <h4>Kevin Schoonover</h4>
+                        <h5>ksyh3@mst.edu</h5>
+                        <i>
+                            <a href="http://github.com">Github</a>
+                            |
+                            <a href="http://linkedin.com">LinkedIn</a>
+                        </i>
+                    </section>
 					<section><h1>Welcome</h1></section>
-					<section>
-						<img class="" src="?"></img>
-						<h3 class="">Kevin Schoonover</h3>
-						<p class="fragment">Github.com :)</p>
-						<p class="fragment">email address</p>
-						<p class="fragment">Linked in man</p>
-					</section>
                 </section>
 				
 				<section>
 					<section>
-						<h1>Who are we?</h1>
-						<h4 class="fragment">We are the ACM Web Development and Design Team</h4>
+						<h2>Who are we?</h2>
+                        <pre class="fragment"><code>We are the ACM Web Development and Design Team</code></pre>
 					</section>
 				</section>
 				<section>
 					<section>
-						<h1>What do we do?</h1>
+						<h2>What do we do?</h2>
 					</section>
 					<section>
-						<h1>Projects</h1>
-						<img src="./img/acmpic.png"></img>
+						<h2 style="position: absolute; right: 60%; width: 40%; top: 40%;">Projects</h2>
+						<img class="" src="./img/acm_mst_edu.png" style="width: 60%;float:right;">
 					</section>
-					<section data-markdown>
-						<script type="text/template">
-							## Languages we use.
-							- HTML
-							- CSS
-							- JavaScript
-							- Python
-							- reStructuredText
-						</script>
+                    <section>
+						<h2 style="position: absolute; left: 60%; width: 40%; top: 40%;">Workshops</h2>
+						<img class="" src="./img/workshops.png" style="width: 60%;float:left;">
 					</section>
-					<section data-markdown>
-						<script type="text/template">
-							## We use a variety of tools.
-							- Vagrant
-							- Django
-							- Sphinx
-							- Git
-						</script>
+					<section>
+
+                        <h2>Languages we use.</h2>
+
+                        <p class="fragment">
+                            <img style="height: 200px;" src="./img/html5css3badges.png">
+                            <img style="height: 200px;" src="./img/JavaScript-logo.png">
+                            <img style="height: 200px;" src="./img/Python.png">
+                        </p>
+					</section>
+					<section>
+						<h2>Also, we use some tools.</h2>
+							<ul>
+                                <li>Vagrant</li>
+                                <li>Django</li>
+                                <li>Sphinx</li>
+                                <li>Git</li>
+                            </ul>
 					</section>
 				</section>
 				<section>
 					<section>
-						<h1>Why join us?</h1>
+						<h2>Why join us?</h2>
 					</section>
 					<section>
-						<h2>Industry Standard<br> Web Development Skills</h2>
+						<h3>Industry Standard<br> Web Development Skills</h3>
 						<p class="fragment">Gain experience through real world web development</p>
 						<p class="fragment">Exposure to a variety of languages and frameworks</p>
 					</section>
@@ -98,10 +104,10 @@
 					</section>
 					<section>
 						<h2>Contact Us!</h2>
-						<p><strong>Email:</strong> acm@mst.edu</p>
-						<p><strong>Discord:</strong> TBD</p>
-						<p><strong>Kevin:</strong> ksyh3@mst.edu</p>
-						<p><strong>Github:</strong> github.com/MST-ACM</p>
+						<p style="text-align: left; margin-left: 25%;"><strong>Email:</strong> acm@mst.edu</p>
+						<p style="text-align: left; margin-left: 25%;"><strong>Discord:</strong> TBD</p>
+						<p style="text-align: left; margin-left: 25%;"><strong>Kevin:</strong> ksyh3@mst.edu</p>
+						<p style="text-align: left; margin-left: 25%;"><strong>Github:</strong> github.com/MST-ACM</p>
 					</section>
 				</section>
 				<section>
@@ -123,7 +129,6 @@
 			Reveal.initialize({
 				controls: false,
 				history: true,
-				previewLinks: true,
 
 
 				// More info https://github.com/hakimel/reveal.js#dependencies
